# TEXT2SQL

./: .gitignore  Cross_Project_Comparison_DSR_ReFoRCE_Spider4o.md  LICENSE  README.md  README_DSRLITE.md  README_RAG_SNOW_AGENT.md  README_REFORCE.md  README_SPIDER2.md  REFORCE_gpt-5-mini_lite_20260315-163302.log.txt  REFORCE_gpt-5-mini_snow_20260315-145639.log.txt
rag_snow_agent/: .env.example  Dockerfile.backend  README.md  docker-compose.yml  main.py  milestones.md  pyproject.toml  task.md
rag_snow_agent/backend/: config.py  dependencies.py  main.py
rag_snow_agent/config/: defaults.yaml
rag_snow_agent/data/: chroma.sqlite3  mirror.db  sample_records.json  sessions.db  smoke_failing_5.jsonl  smoke_ga360_5.jsonl  table_column_descriptions.json
rag_snow_agent/frontend/: index.html
rag_snow_agent/scripts/: build_sqlite_mirror.py  enrich_descriptions.py  extract_sample_records.py  index_external_knowledge.py  ingest_sample_records.py  profile_data.py  smoke_test.sh
rag_snow_agent/tests/: test_best_of_n_minimal.py  test_budget.py  test_candidate_generator.py  test_column_validator.py  test_compare_experiments.py  test_connectivity_join_graph.py  test_constraints.py  test_error_classifier.py  test_experiment_manifest.py  test_gold_joins.py  test_gold_verifier.py  test_infer_from_metadata.py  test_join_cards.py  test_join_graph.py  test_memory_context_builder.py  test_memory_record.py  test_merge_semantic_facts.py  test_metamorphic_minimal.py  test_metrics_aggregation.py  test_plan_expansion.py  test_probes.py  test_question_decomposition.py  test_rrf.py  (+16 more)
(+438 files in other folders)
